--- a/readme.text
+++ b/readme.text
@@ -16,9 +16,13 @@ Push & Pull Procedure to Merge
 Optional
 
 1. git remote -v
-2. git remote set-url origin https://github.com/<new-username>/<new-repo>.git
+2. git remote set-url origin https://github.com/Developer-Team2025/pjdevproduction.git
 3. git remote show origin
 4. git switch --track origin/remote-branch
 5. git remote set-head origin main
+6. git branch -D main
+7. git branch -d main
+8. git push origin --delete branch-name
+9. git push -u origin new-branch-name
  
 
